scss/core/_section.scss
section {
  align-content: stretch;
  display: flex;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  padding: 10rem calc((50% - 60rem) + 10rem);
  position: relative;
  width: 100%;

  &.no-pad {
    padding: 0;
  }

  &:not(:last-child):after {
    background-image: radial-gradient(
      closest-side,
      rgba(0, 0, 0, 0.2),
      var(--transparent)
    );
    background-position-y: -100%;
    background-size: 100% 200%;
    content: '';
    display: block;
    height: 1rem;
    left: 50%;
    position: absolute;
    top: 100%;
    transform: translateX(-50%);
    width: 100%;
  }

  &.center,
  &.hero {
    align-items: center;
    justify-content: center;
  }

  @media (max-width: 1200px) {
    padding: 10rem;
  }
}

